library/general/uniqueroutehost/samples/unique-route-host/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueRoute
metadata:
  name: unique-route-hostname
  labels:
    owner: admin.agilebank.demo
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["route.openshift.io"]
        kinds: ["Route"]
    excludedNamespaces:
      - "openshift-*"
      - "kube-*"
